# subreddit-discovery-tool

./: README.md  pyproject.toml  setup.py
finder/: client.py  collector.py  pipeline.py
package_test/: .gitignore  README.md  config.env.example  run_ai_subreddit_discovery.py  run_test.sh
scripts/: run_pipeline.py
subreddit_discovery_tool/: __init__.py  client.py  coder.py  collector.py  models.py  pipeline.py  utils.py
