[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "subreddit-discovery-tool"
version = "0.2.0"
description = "Discover Reddit communities and code their relevance with GPT models."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["subreddit_discovery_tool*"]
